--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.3.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "shortid": "^2.2.16",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
