--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "shortid": "^2.2.16",
     "slugify": "^1.6.6",
     "uuid": "^9.0.1"
